# ducklib

./: .gitignore  CMakeLists.txt  DuckLib.sln  README.md  SharedDefault.props  ducklib.sln
Core/: Core.vcxproj  Core.vcxproj.filters  Types.h  Utility.cpp  Utility.h
Core/Core/: Core.vcxproj  Core.vcxproj.filters  Utility.cpp
Core/Core.Tests/: Core.Tests.vcxproj  Core.Tests.vcxproj.filters
Core/Logging/: Logger.cpp  Logger.h
Core/Memory/: AllocTracker.cpp  AllocTracker.h  HeapAllocator.cpp  HeapAllocator.h  IAlloc.cpp  IAlloc.h  IAllocator.h  Malloc.cpp  Malloc.h  MemoryInternal.cpp  MemoryInternal.h
Jobs/: ConcurrentQueue.h  JobDoer.cpp  JobDoer.h  JobManager.cpp  JobManager.h  Jobs.vcxproj  Jobs.vcxproj.filters
Net/: Connection.cpp  Connection.h  Net.cpp  Net.h  Net.vcxproj  NetClient.cpp  NetClient.h  Server.h  Shared.cpp  Shared.h  Socket.cpp  Socket.h  shared.cpp
Net/SocketPeer/: SocketPeer.cpp  SocketPeer.vcxproj
Net/SocketServer/: SocketServer.cpp  SocketServer.vcxproj
Render/: Render.vcxproj  Render.vcxproj.filters
Render/Core/: Handle.h  IAdapter.cpp  IAdapter.h  IApi.h  ICommandBuffer.h  IDevice.h  IFence.h  IFrameBuffer.h  IPass.h  IRHI.h  IResourceCommandBuffer.h  ISemaphore.h  ISwapChain.cpp  ISwapChain.h  PassDescription.h  PipelineState.h
Render/Render/: Render.vcxproj  Render.vcxproj.filters
Tests/Core.Tests/: Core.Tests.vcxproj  Core.Tests.vcxproj.filters
Tests/Jobs.Tests/: ConcurrentQueueTests.cpp  Jobs.Tests.vcxproj
Tests/Threading.ConcurrentQueue.Test/: Threading.ConcurrentQueue.Test.vcxproj  Threading.ConcurrentQueue.Test.vcxproj.filters
Tests/Threading.JobDoer.Test/: JobDoerTest.cpp  Threading.JobDoer.Test.vcxproj  Threading.JobDoer.Test.vcxproj.filters
Tests/Threading.JobQueue.Test/: JobQueueTest.cpp  Threading.JobQueue.Test.vcxproj
Tests/Threading.Tests/: ConcurrentQueueSimpleTests.cpp  ConcurrentQueueTests.cpp  Threading.Tests.vcxproj
Threading/: CMakeLists.txt  ConcurrentQueue.h  JobDoer.cpp  JobDoer.h  JobQueue.cpp  JobQueue.h  Thread.cpp  Thread.h  Threading.vcxproj
Threading/Threading/: ConcurrentQueue.h  JobQueue.cpp  Threading.vcxproj
core/: CMakeLists.txt  Core.vcxproj
core/src/: Logger.cpp  logger.cpp
core/src/win/: win_app_window.cpp
include/core/: Logger.h  app_window.h  logger.h
include/net/: Net.h  NetClient.h  Shared.h  Socket.h  net.h  net_buffer_reader.h  net_buffer_writer.h  net_client.h  net_client2.h  shared.h  socket.h
net/: CMakeLists.txt  DUMP.md  Net.vcxproj  Net.vcxproj.filters
net/src/: Net.cpp  NetClient.cpp  Shared.cpp  Socket.cpp  net.cpp  net_buffer_reader.cpp  net_buffer_writer.cpp  net_client.cpp  net_client2.cpp  shared.cpp  socket.cpp
net/test/Net.FragmentReceiver/: FragmentReceiver.cpp  Net.FragmentReceiver.vcxproj  Net.FragmentReceiver.vcxproj.filters
net/test/Net.FragmentSender/: FragmentSender.cpp  Net.FragmentSender.vcxproj
net/test/Net.SocketPeer/: Net.SocketPeer.vcxproj  SocketPeer.cpp  SocketServer.vcxproj.filters
net/test/net_shared_unit_tests/: CMakeLists.txt  main.cpp
net/test/net_socket_tests/: main.cpp
render/: CMakeLists.txt
render/src/core/: Handle.h  IAdapter.h  ICommandBuffer.h  IDevice.h  IFrameBuffer.h  IPass.h  IRHI.h  IResourceCommandBuffer.h  ISwapChain.h  PipelineState.h
render/src/core/D3D12/: D3D12Adapter.cpp  D3D12Adapter.h  D3D12Api.h  D3D12CommandBuffer.cpp  D3D12CommandBuffer.h  D3D12Common.h  D3D12Device.cpp  D3D12Fence.cpp  D3D12Fence.h  D3D12Formats.h  D3D12RHI.cpp  D3D12RHI.h  D3D12ResourceAllocator.cpp  D3D12ResourceAllocator.h  D3D12ResourceCommandBuffer.cpp  D3D12ResourceCommandBuffer.h  D3D12ResourceStates.h  D3D12SwapChain.cpp  D3D12SwapChain.h  d3d12_rhi.cpp
render/src/core/D3D12/Lib/: D3D12Semaphore.h
render/src/core/Resources/: Buffer.h  Constants.h  ImageBuffer.h  InputDescription.h  Rect.h
render/src/core/Vulkan/: VulkanAdapter.cpp  VulkanAdapter.h  VulkanDevice.h  VulkanFence.h  VulkanFrameBuffer.h  VulkanRHI.cpp  VulkanSemaphore.cpp  VulkanSwapChain.cpp
render/test/Render.HelloWorld.Test/: HelloTriangle.cpp  Render.HelloWorld.Test.rc  Render.HelloWorld.Test.vcxproj  Render.HelloWorld.Test.vcxproj.filters  Resource.h
render/test/render_hello_world/: CMakeLists.txt  render_hello_world.cpp
threading/: Threading.vcxproj  Threading.vcxproj.filters
(+164 files in other folders)
